force-app/main/default/objects/PF_Run_Log__c/PF_Run_Log__c.object-meta.xml
<CustomObject>
    <description>Timestamped log entries for pipeline run activity and debugging</description>
    <label>Prompt Factory Run Log</label>
    <nameField>
        <displayFormat>PFRL-{00000000}</displayFormat>
        <label>Log Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prompt Factory Run Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>