force-app/main/default/objects/PF_Run_Log__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Component or class that generated this log entry</description>
    <label>Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>