force-app/main/default/objects/PF_Run_Log__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Additional details, stack traces, or JSON data</description>
    <label>Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>