force-app/main/default/objects/PF_Run_Log__c/fields/Execution_Time_MS__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time_MS__c</fullName>
    <description>Execution time in milliseconds for performance tracking</description>
    <label>Execution Time (MS)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>