force-app/main/default/objects/PF_Run_Log__c/fields/Log_Message__c.field-meta.xml
<CustomField>
    <fullName>Log_Message__c</fullName>
    <description>The log message text</description>
    <label>Log Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>