force-app/main/default/objects/PF_Run_Log__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <description>Master-Detail relationship to the parent Prompt Factory Run</description>
    <label>Run</label>
    <referenceTo>PF_Run__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>