force-app/main/default/objects/PF_Run_Log__c/fields/Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Stage_Number__c</fullName>
    <description>Stage number this log entry is associated with (if applicable)</description>
    <label>Stage Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>