force-app/main/default/objects/PF_Run_Log__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the logged operation completed successfully</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>